--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -36,10 +37,22 @@
  <div class="wrapper row2" id="2">
   <h2 class="row2-title">Works</h2>
     <ul class="slider center mypattern">
-     <li><img src="img/slide1.jpg"></li>
-     <li><img src="img/slide2.jpg"></li>
-     <li><img src="img/slide3.jpg"></li>
-     <li><img src="img/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA_03.jpg"></li> 
+     <li><img src="img/slide1.jpg">
+      <div class="img-text">
+       <p>スクールで作ったオリジナルサイト<br>制作期間１ヶ月。初めて完成させたWebサイト<br>よりシンプルに商品の見やすさを第一にかんがえました</p>
+      </div>
+     </li>
+     <li><img src="img/slide2.jpg">
+      <div class="img-text">
+       <p>病院をイメージしたWebサイト<br>見本を完全に模写して作成。作成期間１ヶ月<br>slick機能やレスポンシブ化まで作成。制作期間２週間</p>
+      </div>
+     </li>
+     <li><img src="img/slide3.jpg">
+      <div class="img-text"><p>天然水をイメージしたWebサイト<br>ヘッダーや背景画像はAi/Psを使い自作しそれ以外模写<br>slick/tab機能/レスポンシブ化まで作成</p></div>
+     </li>
+     <li><img src="img/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA_03.jpg">
+      <div class="img-text"></div>
+     </li> 
     </ul>  
   </div>
 
@@ -51,7 +64,7 @@
   </div>
    <div class="face-text"><p><span>Ryuji hosono</span><br>  22 years old.   Nationality：Japanese,niigata</p></div>
    <h2 class="profile">Profile</h2>
-   <p class="profile-text">生年月日　1998.06.15 新潟県生まれ<br>商業高校卒業後、新卒でベッドメーカーに就職<br>働く中でWebデザイナーという職業に興味を持ち独学を始める。<br>その後本格的にWebデザイナーとして働きたいと思い貯金を使ってWebデザインスクールに通う。<br>働きながら約半年で卒業。イラストレーターやフォトショップ、ドリームウィーバーの基本的な使い方を学び、オリジナルサイトを作成。<br>
+   <p class="profile-text">生年月日　1998.06.15 新潟県生まれ<br>商業高校卒業後、新卒でベッドメーカーに就職。働く中でWebデザイナーという職業に興味を持ち独学を始める。<br>その後本格的にWebデザイナーとして働きたいと思い貯金を使ってWebデザインスクールに通う。働きながら約半年で卒業。<br>イラストレーターやフォトショップ、ドリームウィーバーの基本的な使い方を学び、オリジナルサイトを作成。<br>
    その後会社を辞め、約３ヶ月PHPやRuby、javascript、動画制作なども勉強しながらポートフォリオを作成。<br>今後はよりデザインの勉強をして、Webアプリ開発系、動画編集などの勉強にも力を入れていきたい。<br>
 　　</p>
     
