--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 　　</p>
   </div>
    
-    <h2>Other</h2>
+    <h2 class="other">Other</h2>
     <div class="profile-box">
     <p class="other-text">読書とジムで運動することが好きです。また小さい頃からプラモデルが好きなので、何かを作ることも好き。<br><br>使用エディタはBrackets/Dreawweaver
     </p>
