--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
    </header>
  </div>
-    
+
 
  <div class="wrapper row2" id="2">
   <h2 class="row2-title">Works</h2>
@@ -49,8 +49,8 @@
      <li><img src="img/slide3.jpg">
       <div class="img-text"><p>天然水をイメージしたWebサイト<br>ヘッダーや背景画像はAi/Psを使い自作しそれ以外模写<br>slick/tab機能/レスポンシブ化まで作成</p></div>
      </li>
-     <li><img src="img/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%95%E3%82%A9%E3%83%AA%E3%82%AA_03.jpg">
-      <div class="img-text"></div>
+     <li><img src="img/slide4.jpg" width="105%">
+      <div class="img-text"><p>このポートフォリオサイトです</p></div>
      </li> 
     </ul>  
   </div>
