--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-
+<script src="Js/jquery-3.5.1.min.js"></script>
 <script src="Js/slick.js"></script>
 <script src="Js/main.js"></script>
 <script src="Js/sticky.js"></script>
