--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
  <div class="wrapper row2" id="2">
   <h2 class="row2-title">Works</h2>
     <ul class="slider center mypattern">
-     <li><img src="img/slide1.jpg">
+     <li><a href="GREENbookstore/index.html"><img src="img/slide1.jpg"></a>
       <div class="img-text">
        <p>スクールで作ったオリジナルサイト<br>制作期間１ヶ月。初めて完成させたWebサイト<br>よりシンプルに商品の見やすさを第一にかんがえました</p>
       </div>
      </li>
-     <li><img src="img/slide2.jpg">
+     <li><a href="hospital/index.html"><img src="img/slide2.jpg"></a>
       <div class="img-text">
        <p>病院をイメージしたWebサイト<br>見本を完全に模写して作成。作成期間１ヶ月<br>slick機能やレスポンシブ化まで作成。制作期間２週間</p>
       </div>
      </li>
-     <li><img src="img/slide3.jpg">
+     <li><a href="Water/index.html"><img src="img/slide3.jpg"></a>
       <div class="img-text"><p>天然水をイメージしたWebサイト<br>ヘッダーや背景画像はAi/Psを使い自作しそれ以外模写<br>slick/tab機能/レスポンシブ化まで作成</p></div>
      </li>
      <li><img src="img/slide4.jpg" width="105%">
@@ -153,7 +153,6 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="Js/jquery-3.5.1.min.js"></script>
 <script src="Js/slick.js"></script>
 <script src="Js/main.js"></script>
 <script src="Js/sticky.js"></script>
