--- a/hospital/index.html
+++ b/hospital/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="CSS/slick-theme.css">
 <link rel="stylesheet" href="CSS/slick.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="media.css" rel="stylesheet" type="text/css">
+<link href="CSS/media.css" rel="stylesheet" type="text/css">
 </head>
 <body>	
 	
