--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>無題ドキュメント</title>
-
-<meta name="Description" content="" />
-<meta name="Keywords" content="" />
+<title>ryujiportforio</title>
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="CSS/common.css" rel="stylesheet" type="text/css">
@@ -13,7 +10,6 @@
 <link href="CSS/slick-theme.css" rel="stylesheet" type="text/css">
 <link href="CSS/media.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
  <div class="wrapper row1" id="1">
   <header>
