--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   
  <div class="wrapper row3" id="3">
   <h2 class="row3-title">about</h2>
-  <div class="face-icon">
+  <div class="face-icon fade_off" id="sample">
    <img src="img/myface.png" width="101%">
   </div>
    <div class="face-text"><p><span>Ryuji hosono</span><br>  22 years old.   Nationality：Japanese,niigata</p>
@@ -65,7 +65,7 @@
   </div>
    
     <h2 class="other">Other</h2>
-    <div class="profile-box">
+    <div class="profile-box" id="sample">
     <p class="other-text">読書とジムで運動することが好きです。また小さい頃からプラモデルが好きなので、何かを作ることも好き。<br><br>使用エディタはBrackets/Dreawweaver
     </p>
    </div>
