--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="CSS/media.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+ <div class="wrapper0">
  <div class="wrapper row1" id="1">
   <header>
    <div class="visual">
@@ -152,6 +153,6 @@
 <script src="Js/slick.js"></script>
 <script src="Js/main.js"></script>
 <script src="Js/sticky.js"></script>
-
+</div>
 </body> 
 </html>
