--- a/Water/index.html
+++ b/Water/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+ <div class="wrapper0">
  <div class="wrapper row1">
  </div>
  <header class="main-header">
@@ -278,5 +279,6 @@
 	
 
 </script>
+</div>
 </body>
 </html>
