--- a/hospital/index.html
+++ b/hospital/index.html
@@ -10,7 +10,7 @@
 <link href="CSS/media.css" rel="stylesheet" type="text/css">
 </head>
 <body>	
-	
+<div class="wrapper0">	
 <div class="wrapper row1">
  <div class="main-header"> 
   <img class="pc" src="img/医療サイトロゴ.png" alt="">
@@ -225,6 +225,6 @@
 <script src="js/main.js"></script>
 <script type="text/javascript">
 </script>
+</div>
 </body>
-
 </html>
