--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
    <div class="face-text"><p><span>Ryuji hosono</span><br>  22 years old.   Nationality：Japanese,niigata</p>
    <h2 class="profile">Profile</h2>
-   <p class="profile-text">生年月日　1998.06.15 新潟県生まれ<br>商業高校卒業後、新卒でベッドメーカーに就職。働く中でWebデザイナーという職業に興味を持ち独学を始める。その後本格的にWebデザイナーとして働きたいと思い貯金を使ってWebデザインスクールに通う。働きながら約半年で卒業。イラストレーターやフォトショップ、ドリームウィーバーの基本的な使い方を学び、オリジナルサイトを作成。その後会社を辞め、約３ヶ月PHPやRuby、javascript、動画制作なども勉強しながらポートフォリオを作成。今後はよりデザインの勉強をして、Webアプリ開発系、動画編集などの勉強にも力を入れていきたい。<br>
+   <p class="profile-text">生年月日　1998.06.15 新潟県生まれ<br>商業高校卒業後、新卒で介護・福祉業界に就職。働く中でWebデザイナーという職業に興味を持ち独学を始める。その後本格的にWebデザイナーとして働きたいと思い貯金を使ってWebデザインスクールに通う。働きながら約半年で卒業。イラストレーターやフォトショップ、ドリームウィーバーの基本的な使い方を学び、オリジナルサイトを作成。その後会社を辞め、約３ヶ月PHPやRuby、javascript、動画制作なども勉強しながらポートフォリオを作成。今後はよりデザインの勉強をして、Webアプリ開発系、動画編集などの勉強にも力を入れていきたい。<br>
 　　</p>
   </div>
    
