--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      </li>
      <li><a href="hospital/index.html"><img src="img/slide2.jpg"></a>
       <div class="img-text">
-       <p>病院をイメージしたWebサイト<br>見本を完全に模写して作成。作成期間１ヶ月<br>slick機能やレスポンシブ化まで作成。制作期間２週間</p>
+       <p>病院をイメージしたWebサイト<br>見本を完全に模写して作成。作成期間１ヶ月<br>slick機能やレスポンシブ化まで作成。</p>
       </div>
      </li>
      <li><a href="Water/index.html"><img src="img/slide3.jpg"></a>
