--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="CSS/media.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    
  <div class="wrapper0">
  <div class="wrapper row1" id="1">
   <header>
@@ -35,16 +36,16 @@
     <ul class="slider center mypattern">
      <li><a href="GREENbookstore/index.html"><img src="img/slide1.jpg"></a>
       <div class="img-text">
-       <p>スクールで作ったオリジナルサイト<br>制作期間１ヶ月。初めて完成させたWebサイト<br>よりシンプルに商品の見やすさを第一にかんがえました</p>
+       <p>スクールで作ったオリジナルサイト<br>制作期間１ヶ月。初めて完成させたWebサイト<br>よりシンプルに商品の見やすさを第一にかんがえました</p><a href="GREENbookstore/index.html">Webサイトはこちら</a>
       </div>
      </li>
      <li><a href="hospital/index.html"><img src="img/slide2.jpg"></a>
       <div class="img-text">
-       <p>病院をイメージしたWebサイト<br>見本を完全に模写して作成。作成期間１ヶ月<br>slick機能やレスポンシブ化まで作成。</p>
+       <p>病院をイメージしたWebサイト<br>見本を完全に模写して作成。作成期間１ヶ月<br>slick機能やレスポンシブ化まで作成。</p><a href="hospital/index.html">Webサイトはこちら</a>
       </div>
      </li>
      <li><a href="Water/index.html"><img src="img/slide3.jpg"></a>
-      <div class="img-text"><p>天然水をイメージしたWebサイト<br>ヘッダーや背景画像はAi/Psを使い自作しそれ以外模写<br>slick/tab機能/レスポンシブ化まで作成</p></div>
+      <div class="img-text"><p>天然水をイメージしたWebサイト<br>ヘッダーや背景画像はAi/Psを使い自作しそれ以外模写<br>slick/tab機能/レスポンシブ化まで作成</p><a href="Water/index.html">Webサイトはこちら</a></div>
      </li>
      <li><img src="img/slide4.jpg" width="105%">
       <div class="img-text"><p>このポートフォリオサイトです<br>オリジナルでデザインからコーディングまで行いました。<br>レスポンシブ化まで作成</p>
