--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 　　<p id="text4">アフターエフェクトを使いアニメーション作成にも力を入れていきます</p>
   </div>
   </div>
+　<div class="skils">
+  <img src="img/%E3%82%B9%E3%82%AD%E3%83%AB%E3%83%AC%E3%83%99%E3%83%AB.png">
+  </div>
   </div>
 
     
