--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
   </div>
 　<div class="skils">
-  <img src="img/%E3%82%B9%E3%82%AD%E3%83%AB%E3%83%AC%E3%83%99%E3%83%AB.png">
+  <img src="img/skils.png">
   </div>
   </div>
 
