--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
     <h2 class="other">Other</h2>
     <div class="profile-box" id="sample">
-    <p class="other-text">読書とジムで運動することが好きです。また小さい頃からプラモデルが好きなので、何かを作ることも好き。<br><br>使用エディタはBrackets/Dreawweaver
+    <p class="other-text">読書とジムで運動することが好きです。また小さい頃からプラモデルが好きなので、何かを作ることも好き。<br><br>使用エディタはBrackets/Dreamweaver
     </p>
    </div>
   </div>
