--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!--ここからrow3の内容-->
  <div class="wrapper row3" id="3">
   <h2 class="row3-title">about</h2>
-  <div class="face-icon fade_off" id="sample">
+  <div class="face-icon ef">
    <img src="img/myface.png" width="101%">
   </div>
    <div class="face-text"><p><span>Ryuji hosono</span><br>  22 years old.   Nationality：Japanese,niigata</p>
@@ -78,7 +78,7 @@
   </div>
     <h2 class="other">Other</h2>
     <div class="profile-box" id="sample">
-    <p class="other-text">読書とジムで運動することが好きです。また小さい頃からプラモデルが好きなので、何かを作ることも好き。<br><br>使用エディタはBrackets/Dreamweaver
+    <p class="other-text">読書とジムで運動することが好きです。また小さい頃からプラモデルが好きなので、何かを作ることも好き。<br><br>使用エディタはBrackets/Dreawweaver
     </p>
    </div>
   </div>
@@ -90,7 +90,7 @@
 <!--ここからrow4の内容-->
 <div class="wrapper row4" id="4">
  <h2 class="row4-title">Skills</h2>
- <div class="img-contena">
+ <div class="img-contena ef">
   <div class="img-box" id="icon0">
    <img src="img/sitagaki1_03.png">
     <p id="text0">PC/タブレット/スマホに対応したレスポンシブサイトを作ることができます。</p>
@@ -113,8 +113,9 @@
 　　<p id="text4">アフターエフェクトを使いアニメーション作成にも力を入れていきます</p>
   </div>
   </div>
-　<div class="skils">
-  <img src="img/skils.png">
+　<div class="skills">
+   <h2>skill  level</h2>
+   <img src="img/skils.png" class="ef">
   </div>
   </div>
 <!--row4の内容終わり-->
